--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <title>velar</title>
   </head>
   <body>
-    <div class="loader">
-      <div class="loader-text"></div>
-    </div>
+    <div class="loader"></div>
+    <div class="motion-blur-overlay"></div>
 
     <main class="slides-container">
         
@@ -20,10 +19,7 @@
                 <h2 class="title">Botanique</h2>
             </div>
             <div class="media-container">
-                <video autoplay muted loop playsinline poster="public/medias/BOTANIQUE.png">
-                  <source src="public/medias/botanique.mp4" type="video/mp4" alt="Botanique">
-                </video>
-                <video class="video-reveal" autoplay muted loop playsinline>
+                <video  muted loop playsinline poster="public/medias/BOTANIQUE.png">
                   <source src="public/medias/botanique.mp4" type="video/mp4" alt="Botanique">
                 </video>
             </div>
@@ -34,10 +30,7 @@
                 <h2 class="title">Pièces</h2>
             </div>
             <div class="media-container">
-                <video autoplay muted loop playsinline poster="public/medias/pieces.jpg">
-                  <source src="public/medias/pieces.mp4" type="video/mp4" alt="Pieces">
-                </video>
-                <video class="video-reveal" autoplay muted loop playsinline>
+                <video  muted loop playsinline poster="public/medias/PIECES.png">
                   <source src="public/medias/pieces.mp4" type="video/mp4" alt="Pieces">
                 </video>
             </div>
@@ -48,8 +41,8 @@
                 <h2 class="title">Paris Noël</h2>
             </div>
             <div class="media-container">
-                <video autoplay muted loop playsinline poster="public/medias/SOPARIS.png">
-                  <source src="public/medias/so_paris_cntoit.mp4" type="video/mp4" alt="Toit parisien">
+                <video  muted loop playsinline poster="public/medias/SOPARIS.png">
+                  <source src="public/medias/soparis.mp4" type="video/mp4" alt="Toit parisien">
                 </video>
             </div>
         </section>
@@ -59,7 +52,7 @@
               <h2 class="title">Télévisions</h2>
           </div>
           <div class="media-container">
-              <video autoplay muted loop playsinline poster="public/medias/TELES.png">
+              <video  muted loop playsinline poster="public/medias/TELES.png">
                 <source src="public/medias/teles.mp4" type="video/mp4" alt="Télévisions">
               </video>
           </div>
@@ -70,8 +63,19 @@
               <h2 class="title">Ville de Paris</h2>
           </div>
           <div class="media-container">
-              <video autoplay muted loop playsinline poster="public/medias/VILLE.png">
+              <video  muted loop playsinline poster="public/medias/VILLE.png">
                 <source src="public/medias/villeparis.mp4" type="video/mp4" alt="Ville de Paris">
+              </video>
+          </div>
+        </section>
+
+        <section class="slide">
+          <div class="slide-content">
+              <h2 class="title">I Kept my name</h2>
+          </div>
+          <div class="media-container">
+              <video  muted loop playsinline poster="public/medias/I_KEPT_MY_NAME.png">
+                <source src="public/medias/ikeptmyname.mp4" type="video/mp4" alt="Ville de Paris">
               </video>
           </div>
         </section>
