--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/public/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/847debfb6c.js" crossorigin="anonymous"></script>
-    <title>velar</title>
+    <title>VELAR</title>
   </head>
   <body>
     <div class="loader"></div>
