--- a/index.html
+++ b/index.html
@@ -16,57 +16,24 @@
         
         <section class="slide">
             <div class="slide-content">
-                <h2 class="title">Botanique</h2>
+                <h2 class="title">LIERAC</h2>
             </div>
             <div class="media-container">
                 <video  muted loop playsinline poster="public/medias/BOTANIQUE.png">
-                  <source src="public/medias/botanique.mp4" type="video/mp4" alt="Botanique">
+                  <source src="public/medias/botanique.mp4" type="video/mp4" alt="LIERAC">
                 </video>
             </div>
         </section>
 
         <section class="slide">
             <div class="slide-content">
-                <h2 class="title">Pièces</h2>
+                <h2 class="title">BA&SH</h2>
             </div>
             <div class="media-container">
                 <video  muted loop playsinline poster="public/medias/PIECES.png">
-                  <source src="public/medias/pieces.mp4" type="video/mp4" alt="Pieces">
+                  <source src="public/medias/pieces.mp4" type="video/mp4" alt="BA&SH">
                 </video>
             </div>
-        </section>
-
-        <section class="slide">
-            <div class="slide-content">
-                <h2 class="title">Paris Noël</h2>
-            </div>
-            <div class="media-container">
-                <video  muted loop playsinline poster="public/medias/SOPARIS.png">
-                  <source src="public/medias/soparis.mp4" type="video/mp4" alt="Toit parisien">
-                </video>
-            </div>
-        </section>
-
-        <section class="slide">
-          <div class="slide-content">
-              <h2 class="title">Télévisions</h2>
-          </div>
-          <div class="media-container">
-              <video  muted loop playsinline poster="public/medias/TELES.png">
-                <source src="public/medias/teles.mp4" type="video/mp4" alt="Télévisions">
-              </video>
-          </div>
-        </section>
-
-        <section class="slide">
-          <div class="slide-content">
-              <h2 class="title">Ville de Paris</h2>
-          </div>
-          <div class="media-container">
-              <video  muted loop playsinline poster="public/medias/VILLE.png">
-                <source src="public/medias/villeparis.mp4" type="video/mp4" alt="Ville de Paris">
-              </video>
-          </div>
         </section>
 
         <section class="slide">
@@ -75,11 +42,54 @@
           </div>
           <div class="media-container">
               <video  muted loop playsinline poster="public/medias/I_KEPT_MY_NAME.png">
-                <source src="public/medias/ikeptmyname.mp4" type="video/mp4" alt="Ville de Paris">
+                <source src="public/medias/ikeptmyname.mp4" type="video/mp4" alt="I KEPT MY NAME">
               </video>
           </div>
         </section>
-        
+
+        <section class="slide">
+          <div class="slide-content">
+              <h2 class="title">THE MAGIC IS</h2>
+          </div>
+          <div class="media-container">
+              <video  muted loop playsinline poster="public/medias/TELES.png">
+                <source src="public/medias/teles.mp4" type="video/mp4" alt="THE MAGIC IS">
+              </video>
+          </div>
+        </section>
+
+        <section class="slide">
+          <div class="slide-content">
+              <h2 class="title">STOP OVERTHINKING</h2>
+          </div>
+          <div class="media-container">
+              <video  muted loop playsinline poster="public/medias/OVERTHINK.png">
+                <source src="public/medias/overthink.mp4" type="video/mp4" alt="STOP OVERTHINKING">
+              </video>
+          </div>
+        </section>
+
+        <section class="slide">
+          <div class="slide-content">
+              <h2 class="title">RED</h2>
+          </div>
+          <div class="media-container">
+              <video  muted loop playsinline poster="public/medias/VILLE.png">
+                <source src="public/medias/villeparis.mp4" type="video/mp4" alt="RED">
+              </video>
+          </div>
+        </section>
+
+        <section class="slide">
+            <div class="slide-content">
+                <h2 class="title">SO/PARIS</h2>
+            </div>
+            <div class="media-container">
+                <video  muted loop playsinline poster="public/medias/SOPARIS.png">
+                  <source src="public/medias/soparis.mp4" type="video/mp4" alt="SO/PARIS">
+                </video>
+            </div>
+        </section>
     </main>
 
     <img class="logo-fixed" src="/public/logoWhite.png" alt="Velar logo" draggable="false">
